--- a/foodnotepad1/foodnotepad1/Info.plist
+++ b/foodnotepad1/foodnotepad1/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Will use your photo library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Will add photo to your photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Will use your camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
